components/spi/oauth_ingress_patch_delete.yaml
$patch: delete
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: oauth-ingress
