components/spi/oauth_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spi-oauth-route
spec:
  port:
    targetPort: 8000
  to:
    kind: Service
    name: spi-oauth-service
  tls:
    termination: edge
