components/spi/scm_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: file-retriever-server-service
  namespace: spi-system
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: spi-scm-file-retriever-server-service
  tls:
    termination: edge
