components/spi/vault_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spi-vault
spec:
  to:
    kind: Service
    name: spi-vault
  port:
    targetPort: 8200
  tls:
    termination: edge
